--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <!-- About Us section  -->
       <section class="aboutus" id="about-us">
-        <h1 style="font-size: 48px">About Us</h1>
+        <h1 style="font-size: 48px">About AWS Cloud Club Nepal</h1>
         <p class="aboutus-text">
           AWS Cloud Club Nepal CRM is a customer relationship management platform built to
           help businesses of all sizes streamline their sales, marketing, and
